--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,12 @@ body.no-scroll {
   overflow: hidden; /* Полностью отключает прокрутку */
   touch-action: none; /* Отключает жесты на мобильных устройствах */
 }
+
+/* index.css */
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Отключение скроллинга */
+  height: 100%; /* Устанавливаем фиксированную высоту */
+}
+
